# PyCpp

./: .gitignore  LICENSE  README.md  setup.cfg
PyCpp/: __init__.py  _pointer.py  errors.py  fstream.py  iostream.py  ostream.py  sstream.py  stringpp.py  stringstream.py  vector.py
examples/: cout.py
examples/cin/: cin.cpp  cin.py
examples/cout/: cout.cpp  cout.py
examples/fizzbuzz/: fizzbuzz.cpp  fizzbuzz.py
examples/fstream/: fileStream.cpp  fileStream.py
examples/stringFunctions/: strf.cpp  strf.py
tests/: __init__.py
