[metadata]
name = PyCpp
version = 0.1
description = An effort to bring Cpp like syntax to Python
long_description = file: README.md
keywords = c++, cpp, cpp.py, PyCpp, pycpp
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    PyCpp
install_requires =
    forbiddenfruit