[metadata]
name = Py.Cpp
version = 0.1.post1
description = An effort to bring Cpp like syntax to Python
long_description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
keywords = c++, cpp, cpp.py, PyCpp, pycpp
license = MIT License

url = https://github.com/WizzyGeek/PyCpp
project-urls =
    Source = https://github.com/WizzyGeek/PyCpp
    Tracker = https://github.com/WizzyGeek/PyCpp/issues
    Download = https://pypi.org/project/Py.Cpp/#files

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
packages = find:
install_requires =
    forbiddenfruit

[options.packages.find]
exclude = tests
